fix(layer-selector): add drop shadow to match other esri map widgets
This must have broken in a recent esri js release.

--- a/packages/layer-selector/src/LayerSelector.css
+++ b/packages/layer-selector/src/LayerSelector.css
@@ -30,6 +30,9 @@
   background: #fff;
   pointer-events: auto;
 }
+.layer-selector.esri-component.esri-widget {
+  margin-bottom: 0;
+}
 .layer-selector--width {
   width: 8em;
 }
